<resources>
    <string name="app_name">Magic Mirror</string>
    <string name="seekbar_label">Move to control the position:</string>
    <string name="proximity_label">Proximity Sensor:</string>
    <string name="pot_label">Char Select Potentiometer:</string>
<string name="analog_label">Alcohol Sensor:</string>
<string name="detected_label">Magic Mirror Status:</string>
<string name="myLocationString">My Location</string>
<string name="prefTitle">Magic Mirror Settings</string>
<string name="breathalyzerStatusText">Magic Mirror Status:</string>
<string name="character_default_value">1</string>
<string name="dialogTitleVoice">Select Character</string>
<string name="listSummaryVoice">The Voice of the Magic Mirror</string>
<string name="character">Select Character</string>
<string name="selected_character">selected_character</string>
<string name="menu_prefs_title">Settings</string>
<string name="prefSummary">Magic Mirror Settings</string>
<string name="menu_instructions_title">Setup Instructions</string>
<string name="menu_socialmedia_title">Social Media Accounts</string>
<string name="pref_tts_no_drinks">pref_tts_no_drinks</string>
<string name="tts_no_drinks">You have not had anything to drink</string>
<string name="pref_tts_few_drinks">pref_tts_few_drinks</string>
<string name="tts_few_drinks">Just a few drinks, have another</string>
<string name="pref_tts_buzzed">pref_tts_buzzed</string>
<string name="tts_buzzed">Feeling a little tipsy are we?</string>
<string name="pref_tts_drunk">pref_tts_drunk</string>
<string name="tts_drunk">You are quite drunk!</string>
<string name="pref_countdown">pref_countdown</string>
<string name="countdown_duration">6</string>
<string name="pref_proxLowerRange">pref_proxLowerRange</string>
<string name="proxLowerRangeDefault">200</string>
<string name="pref_proxUpperRange">pref_proxUpperRange</string>
<string name="proxUpperRangeDefault">300</string>
<string name="pref_max_value">pref_max_value</string>
<string name="max_value">12</string>
<string name="pref_friend_phone">pref_friend_phone</string>
<string name="friend_phone">4085550100</string>
<string name="pref_taxi_phone">pref_taxi_phone</string>
<string name="taxi_phone">4082931234</string>
<string name="pref_tweet_no_drinks">pref_tweet_no_drinks</string>
<string name="tweet_no_drinks">Little to no alcohol detected</string>
<string name="pref_tweet_few_drinks">pref_tweet_few_drinks</string>
<string name="tweet_few_drinks">I am almost sober</string>
<string name="pref_tweet_buzzed">pref_tweet_buzzed</string>
<string name="tweet_buzzed">I am feeling tipsy</string>
<string name="pref_tweet_drunk">pref_tweet_drunk</string>
<string name="tweet_drunk">I am drunk!</string>
<string name="pref_facebook_post">pref_facebook_post</string>
<string name="pref_facebook_friends">pref_facebook_friends</string>
<string name="callFriendButtonString">Call Designated Driver</string>
<string name="findFriendButtonString">Find Friends</string>
<string name="callTaxiButtonString">Call Taxi</string>
<string name="TaxiMagicButtonString">Taxi Magic</string>
<string name="whereamiButtonString">Where Am I?</string>
<string name="facebookPostButtonString">Facebook Post</string>
<string name="tweetButtonString">Tweet</string>
<string name="cancelButtonString">Cancel</string>
<string name="pref_debug">pref_debug</string>
<string name="pref_taxi_sms">pref_taxi_sms</string>
<string name="taxi_sms_default">862442</string>
<string name="pref_shake_start">pref_shake_start</string>
<string name="drinkometer">Drink-O-Meter</string>
<string name="notConnectedLabel">Not Connected</string>
<string name="FindPLacesButtonString">Nearby Places/Check In</string>
<string name="pref_proximity_sensor">pref_proximity_sensor</string>
<string name="pref_pot_sensor"></string>
<string name="pref_pot_sensorDefault">false</string>
<string name="menuStealthMode">Stealth Mode</string>
<string name="pref_stealth_mode">pref_stealth_mode</string>
<string name="pref_stealth_modeDefault">false</string>
<string name="menuStealthModeSummary">No idle video is played, videos appear only when triggered by a sensor</string>
<string name="notConnected_label">You are not Bluetooth paired to the PIXEL board. Pair using pin: 0000.\n\n</string>
<string name="screenBrightness">Screen Brightness</string>
<string name="pref_screenBrightness">pref_screenBrightness</string>
<string name="screenBrightnessDefault">60</string>
<string name="screenBrightnessSummary">Max value is 99, make lower to dim the screen</string>
<string name="proximityMatches">Proximity Duration</string>
<string name="pref_prox_matches">pref_prox_matches</string>
<string name="proximityMatchesDefault">50</string>
<string name="proximityMatchesSummary">How long the user is within the proximity sensor range before the videos trigger, increase for a longer and decrease for shorter video trigger duration, increments of 50 equals roughly 1 second</string>
<string name="cancelButtonVerbage">Cancel</string>
<string name="taxiMagicBottomVerbage">Taxi Magic service available in US major cities only</string>
<string name="taxiScreenLabelVerbage">Enter pick up address, you\&apos;ll then receive an SMS text confirmation shortly</string>
<string name="getTaxiButtonVerbage">Send</string>
<string name="taxiMagicImageDescription">Taxi Magic Logo</string>
<string name="twitter_btn_post">Login Twitter</string>
<string name="fb_btn_post">Login Facebook</string>
<string name="btn_clear_credentialsVerbage">Logout Twitter</string>
<string name="facebookLogoutButtonVerbage">Logout Facebook</string>
<string name="fb_logged_out2">Facebook Status: Logged Out.\n\nNote: If you have the official Facebook app installed, the signed on user will be taken from that app. If you want to sign in as a different user from this app, you\&apos;ll need to first logout and login from the Facebook app.</string>
<string name="twitter_logged_out2">Twitter Status: Logged Out</string>
<string name="socialMediaLabel">Note: No alcohol detector Tweets or Facebook posts will happen automatically. After each alcohol detection result, you can choose to Tweet and/or Facebook Post the reading.</string>
<string name="fbButtonVerbage">Post Message</string>
<string name="fb_logged_in">Facebook Status: Logged In</string>
<string name="fb_logged_out">Facebook Status: Logged Out\n\n
    You will be prompted to login after clicking Post Message</string>
<string name="fb_label">This message will be posted to your Facebook account, you can edit it before posting.</string>
<string name="fbCompleteString">Message Posted to Facebook</string>
<string name="twitterButtonVerbage">Tweet</string>
<string name="menuDisplayData">Proximity Sensor</string>
<string name="menuDisplayDataSummary">Turn on the proximity sensor</string>
<string name="menuCalibrationTitle">Proximity Sensor Settings</string>
<string name="menuMinimumBaseline">Proximity Lower Range</string>
<string name="menuMinimumBaselineSummary">The lower range of the proximity sensor. The proximity sensor will trigger when the proximity sensor value is between the lower and upper range. Turn on Verbose (above in Settings) to see the proximity sensor values and calibrate.</string>
<string name="menuDebug">Verbose</string>
<string name="menuDebugSummary">Displays proximity sensor, char select potentiometer, weather button, stock button, and weather data. Turn off Verbose when you have everything configured and working.</string>
<string name="menu_about_title">About</string>
<string name="pref_debugDefault">true</string>
<string name="pref_proximity_sensorDefault">false</string>
    <string name="str_full_name">Not Used, Ignore This</string>
    <string name="str_birthday">Not Used, Ignore This</string>
    <string name="str_address">Not Used, Ignore This</string>
    <string name="str_mobile">Not Used, Ignore This</string>
    <string name="str_email">Not Used, Ignore This</string>
    <string name="option_menu_setting">Set Weather</string>
    <string name="stock_menu_setting">Enter Stock Tickers</string>
    <string name="bluetooth_pair">Blueooth Pairing</string>
    <string name="bluetooth_pairSummary">Shortcut to the Bluetooth settings screen. Pair to a PIXEL Board using code: 0000 or if using a IOIO board, use code: 4545</string>
    <string name="menuStocksTitle">Stock Settings</string>
    <string name="menuStocksTitleSummary">Stock Settings</string>
    <string name="goodStockThreshold">Good Stock Threshold</string>
    <string name="pref_good_stock_value">pref_good_stock_value</string>
    <string name="pref_good_stock_default_value">3</string>
    <string name="goodStockThresholdSummary">If the sum gain (per individual ticker performance, not how many shares you own) of your stocks is above this value, the good stock response plays. Just enter one stock ticker to track only one stock.</string>
     <string name="badStockThreshold">Bad Stock Threshold</string>
    <string name="pref_bad_stock_value">pref_bad_stock_value</string>
    <string name="pref_bad_stock_default_value">-1</string>
    <string name="badStockThresholdSummary">If the sum loss of your stocks is below this value, the bad day for Stocks video will play. If the loss or gain is between the good and bad, the ok stock response plays.</string>
    <string name="menuPinsTitle">IOIO / PIXEL Pins</string>
    <string name="menuPinsTitleSummary">You can just use the default pins settings or change them</string>
    <string name="proximityPinNumber">Proximity Sensor Pin</string>
    <string name="pref_prox_pinNumber">pref_prox_pinNumber</string>
    <string name="pref_prox_pinNumber_default_value">34</string>
    <string name="proximityPinNumberSummary">Pin number of the proximity sensor. Use a Sharp IR proximity sensor (cheaper) or a sonar based Maxbotix EZ series proximity sensor.</string>
    <string name="potPinNumber">Potentiometer Pin</string>
    <string name="pref_pot_pinNumber">pref_pot_pinNumber</string>
    <string name="pref_pot_pinNumber_default_value">35</string>
    <string name="potPinNumberSummary">Pin number of the potentiometer for changing the Magic Mirror character.</string>
    <string name="weatherPinNumber">Weather Pin</string>
    <string name="pref_weather_pinNumber">pref_weather_pinNumber</string>
    <string name="pref_weather_pinNumber_default_value">4</string>
    <string name="weatherPinNumberSummary">Pin number of the weather switch for the weather forecast</string>
    <string name="stockPinNumber">Stock Pin</string>
    <string name="pref_stock_pinNumber">pref_stock_pinNumber</string>
    <string name="pref_stock_pinNumber_default_value">31</string>
    <string name="stockPinNumberSummary">Pin number of the stock switch for the stock results</string>
    <string name="ledPinNumber">LED Pin</string>
    <string name="pref_led_pinNumber">pref_led_pinNumber</string>
    <string name="pref_led_pinNumber_default_value">1</string>
    <string name="ledPinNumberSummary">Pin number of the LED indicator</string>
    <string name="menuCustomMode">Custom Videos</string>
    <string name="pref_custom_modeDefault">false</string>
    <string name="menuCustomModeSummary">Add   custom video responses from your SD card. Refer to the documentation for the required SD card path and file naming conventions.</string>
    <string name="weatherButtonLabel">Weather Button:</string>
    <string name="stockButtonLabel">Stock Button:</string>
    <string name="weatherForecastLabel">Weather Forecast:</string>
    <string name="Instructions">Enter Settings in this app to turn on your desired sensors including calibrating the proximity sensor. Turn off Verbose from Settings once you have everything working to hide this and the above text. If using the weather feature, you will also need to register for a free Open Weather Map API Key at http://openweathermap.com/api and enter this key in Settings. If your Android device does not have a menu button, long press the recent apps button to enter Settings in this app.</string>
</resources>