<?xml version="1.0" encoding="utf-8"?>
<!-- This file is /res/menu/mainmenu.xml -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
<item android:id="@+id/menu_prefs"
    android:title="@string/menu_prefs_title"
    android:icon="@drawable/ic_menu_preferences"
/>

<item android:id="@+id/menu_instructions"
android:title="@string/menu_instructions_title"
android:icon="@drawable/ic_menu_database"
/>

<item android:id="@+id/menu_about"
android:title="@string/menu_about_title"
android:icon="@drawable/ic_menu_info_details"
/>

<!--  -->
<item  
android:id="@+id/menu_setting"
android:title="@string/option_menu_setting" 
android:icon="@drawable/ic_menu_sun" 
/>

<item  
android:id="@+id/menu_stock"
android:title="@string/stock_menu_setting" 
android:icon="@drawable/ic_menu_chart" 
/>



</menu>
