<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
		
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="53dp"
	    android:orientation="horizontal"
	    android:paddingTop="26px" >

		<TextView
		    android:id="@+id/notConnectedLabel"
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:paddingRight="5px"
		    android:text="@string/notConnected_label"
		    android:textColor="#872657"
		    android:textSize="18sp" />
  
	</LinearLayout>

	<TextView
	    android:id="@+id/proximityLabel"
	    android:layout_width="261dp"
	    android:layout_height="wrap_content"
	    android:paddingRight="5px"
	    android:text="@string/proximity_label" />

	<TextView
	    android:id="@+id/proximityValue"
	    android:layout_width="357dp"
	    android:layout_height="wrap_content"
	    android:text="prox sensor not enabled"
	    android:textColor="#0000ff" />

	<TextView
	    android:id="@+id/potLabel"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingRight="5px"
	    android:text="@string/pot_label" />

	<TextView
	    android:id="@+id/potValue"
	    android:layout_width="212dp"
	    android:layout_height="wrap_content"
	    android:text="char select pot not enabled"
	    android:textColor="#0000ff" />
	
	<TextView
	    android:id="@+id/WeatherButtonLabel"
	    android:layout_width="357dp"
	    android:layout_height="wrap_content"
	    android:text="@string/weatherButtonLabel" />
	
	<TextView
	    android:id="@+id/weatherButtonValue"
	    android:layout_width="239dp"
	    android:layout_height="wrap_content"
	    android:text="weather button not enabled"
	    android:textColor="#0000ff" />
	
	<TextView
	    android:id="@+id/stockButtonLabel"
	    android:layout_width="357dp"
	    android:layout_height="wrap_content"
	    android:text="@string/stockButtonLabel" />
	
	<TextView
	    android:id="@+id/stockButtonValue"
	    android:layout_width="239dp"
	    android:layout_height="wrap_content"
	    android:text="stock button not enabled"
	    android:textColor="#0000ff" />

	<TextView
	    android:id="@+id/WeatherForecastLabel"
	    android:layout_width="357dp"
	    android:layout_height="wrap_content"
	    android:text="@string/weatherForecastLabel" />
	
	<TextView
	    android:id="@+id/result"
	    android:layout_width="318dp"
	    android:layout_height="wrap_content"
	    android:text="no weather forecast data"
	    android:textColor="#0000ff" />
	
	<TextView
	    android:id="@+id/instructions"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/Instructions" />

<VideoView
    android:id="@+id/VideoView"
    android:layout_width="fill_parent"
    android:layout_height="match_parent" >
</VideoView>
	
</LinearLayout>